Bug 50004 - [4.7 Regression] ICE in c_ptr_tests_16.f90
Summary: [4.7 Regression] ICE in c_ptr_tests_16.f90
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: fortran (show other bugs)
Version: 4.7.0
: P3 normal
Target Milestone: 4.7.0
Assignee: Thomas Koenig
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-08-06 09:16 UTC by Thomas Koenig
Modified: 2021-03-29 22:01 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2011-08-06 09:19:12


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Koenig 2011-08-06 09:16:59 UTC
The recent commit to fix PR 37211 has led to a regression in c_ptr_tests_16.f90.

Am looking into this.
Comment 1 Thomas Koenig 2011-08-06 12:52:35 UTC
I have an (obvious) patch that I plan to commit this evening.
Comment 2 Thomas Koenig 2011-08-06 15:19:48 UTC
Author: tkoenig
Date: Sat Aug  6 15:19:45 2011
New Revision: 177527

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=177527
Log:
2011-08-06  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/50004
	* target-memory.c (gfc_target_expr-size): Don't clobber typespec
	for derived types.
	* simplify.c (gfc_simplify_transfer): Don't calculate source_size
	twice.


Modified:
    trunk/gcc/fortran/ChangeLog
    trunk/gcc/fortran/simplify.c
    trunk/gcc/fortran/target-memory.c
Comment 3 Thomas Koenig 2011-08-06 15:26:55 UTC
Fixed, closing.