2011-08-06  Thomas Koenig  <tkoenig@gcc.gnu.org>

PR fortran/50004
	* target-memory.c (gfc_target_expr-size): Don't clobber typespec
	for derived types.
	* simplify.c (gfc_simplify_transfer): Don't calculate source_size
	twice.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@177527 138bc75d-0d04-0410-961f-82ee72b054a4